--- a/custom-proxy.yaml
+++ b/custom-proxy.yaml
@@ -24,6 +24,8 @@ payload:
   - IP-CIDR,92.223.84.0/24,PROXY
   - IP-CIDR,95.129.233.136/29,PROXY
   - IP-CIDR,95.216.208.0/20,PROXY
-  # ----- kino.pub END -----
+  # -------- 4pda --------
+  - DOMAIN-SUFFIX,4pda.to
+  # --------      --------
 
 
