--- a/discord.yaml
+++ b/discord.yaml
@@ -1,20 +1,21 @@
-dis.gd 
-discord.co 
-discord.com 
-discord.design 
-discord.dev 
-discord.gg 
-discord.gift 
-discord.gifts 
-discord.media 
-discord.new 
-discord.store 
-discord.tools 
-discordapp.com 
-discordapp.net 
-discordmerch.com
-discordpartygames.com 
-discord-activities.com 
-discordactivities.com 
-discordsays.com
-discord-attachments-uploads-prd.storage.googleapis.com
+payload:
+  - DOMAIN-SUFFIX,dis.gd
+  - DOMAIN-SUFFIX,discord.co
+  - DOMAIN-SUFFIX,discord.com
+  - DOMAIN-SUFFIX,discord.design
+  - DOMAIN-SUFFIX,discord.dev
+  - DOMAIN-SUFFIX,discord.gg
+  - DOMAIN-SUFFIX,discord.gift
+  - DOMAIN-SUFFIX,discord.gifts
+  - DOMAIN-SUFFIX,discord.media
+  - DOMAIN-SUFFIX,discord.new
+  - DOMAIN-SUFFIX,discord.store
+  - DOMAIN-SUFFIX,discord.tools
+  - DOMAIN-SUFFIX,discordapp.com
+  - DOMAIN-SUFFIX,discordapp.net
+  - DOMAIN-SUFFIX,discordmerch.com
+  - DOMAIN-SUFFIX,discordpartygames.com
+  - DOMAIN-SUFFIX,discord-activities.com
+  - DOMAIN-SUFFIX,discordactivities.com
+  - DOMAIN-SUFFIX,discordsays.com
+  - DOMAIN-SUFFIX,discord-attachments-uploads-prd.storage.googleapis.com
