--- a/manus.yaml
+++ b/manus.yaml
@@ -17,4 +17,4 @@ payload:
   - DOMAIN-SUFFIX,help.manus.im
 
   # Если у тебя Manus где-то встречается как поддомен/зеркало
-  - DOMAIN-KEYWORD,manus
+  # - DOMAIN-KEYWORD,manus
