--- a/custom-proxy.yaml
+++ b/custom-proxy.yaml
@@ -51,6 +51,8 @@ payload:
   - PROCESS-NAME,tv.twitch.android.app
   # -------- aeza -------
   - DOMAIN-SUFFIX,aeza.net
-  # -------- aeza -------
+  # -------- other -------
+  # -------- other -------
+
 
 
