--- a/meta.yaml
+++ b/meta.yaml
@@ -18,6 +18,7 @@ payload:
   - DOMAIN-SUFFIX,wa.me
   - DOMAIN-SUFFIX,circlecrewpinkcrowd.com
   - DOMAIN-SUFFIX,bintray.com
+  - DOMAIN-KEYWORD,whatsapp
   - IP-CIDR,158.85.224.160/27
   - IP-CIDR,158.85.46.128/27
   - IP-CIDR,158.85.5.192/27
