--- a/custom-proxy.yaml
+++ b/custom-proxy.yaml
@@ -85,7 +85,9 @@ payload:
   - DOMAIN-SUFFIX,ysagin.top
   # -------- forex -------
   - DOMAIN-SUFFIX,roboforex.com
+  - DOMAIN-SUFFIX,roboforex.org
   # -------- forex -------
+
 
 
 
