--- a/custom-proxy.yaml
+++ b/custom-proxy.yaml
@@ -88,7 +88,12 @@ payload:
   - DOMAIN-SUFFIX,roboforex.org
   # -------- other -------
   - DOMAIN-SUFFIX,pine64.com
-  # -------- other -------
+  # -------- ii -------
+  - DOMAIN-SUFFIX,  grok.com
+  # -------- ii -------
+
+
+
 
 
 
