--- a/custom-proxy.yaml
+++ b/custom-proxy.yaml
@@ -91,7 +91,10 @@ payload:
   # -------- ii -------
   - DOMAIN-SUFFIX,grok.com
   - DOMAIN-SUFFIX,x.ai
+  # -------- music -------
+  - DOMAIN-SUFFIX,hearthis.at
   # -------- ii -------
+
 
 
 
