--- a/manus.yaml
+++ b/manus.yaml
@@ -1,22 +1,5 @@
 payload:
-  # Main site + docs + builder
-  - DOMAIN-SUFFIX,manus.im
-  - DOMAIN-SUFFIX,files.manuscdn.com
-  - DOMAIN-SUFFIX,manuscdn.com
-
-  # API / platform
   - DOMAIN-SUFFIX,manus.ai
-  - DOMAIN,api.manus.ai
-
-  # API docs host
-  - DOMAIN,open.manus.im
-
-  # Help center
-  - DOMAIN,help.manus.im
-
-  # На всякий случай: поддомены
-  - DOMAIN-SUFFIX,open.manus.im
-  - DOMAIN-SUFFIX,help.manus.im
-
-  # Если у тебя Manus где-то встречается как поддомен/зеркало
-  # - DOMAIN-KEYWORD,manus
+  - DOMAIN-SUFFIX,manus.im
+  - DOMAIN-SUFFIX,manuscdn.com
+  - DOMAIN-KEYWORD,manus
