--- a/meta.yaml
+++ b/meta.yaml
@@ -1,33 +1,40 @@
 payload:
-#--------------- meta -----------
-  - DOMAIN-SUFFIX,instagram.com
-  - DOMAIN-SUFFIX,ig.me
+#--------------- Facebook & Instagram ---------------
   - DOMAIN-SUFFIX,facebook.com
   - DOMAIN-SUFFIX,facebook.net
-  - DOMAIN-SUFFIX,cdninstagram.com
+  - DOMAIN-SUFFIX,fb.com
+  - DOMAIN-SUFFIX,fb.me
   - DOMAIN-SUFFIX,fbcdn.net
   - DOMAIN-SUFFIX,fbsbx.com
   - DOMAIN-SUFFIX,internalfb.com
+  - DOMAIN-SUFFIX,instagram.com
+  - DOMAIN-SUFFIX,ig.me
+  - DOMAIN-SUFFIX,cdninstagram.com
+  - DOMAIN-SUFFIX,threads.net
   - DOMAIN-SUFFIX,oculus.com
   - DOMAIN-SUFFIX,meta.com
-  - DOMAIN-SUFFIX,threads.net
-  - DOMAIN-SUFFIX,fb.com
+
+#--------------- WhatsApp (Сервисы и звонки) ---------------
   - DOMAIN-SUFFIX,whatsapp.com
   - DOMAIN-SUFFIX,whatsapp.net
   - DOMAIN-SUFFIX,whatsapp.biz
   - DOMAIN-SUFFIX,wa.me
+  - DOMAIN-KEYWORD,whatsapp
+
+#--------------- Вспомогательная инфраструктура ---------------
   - DOMAIN-SUFFIX,circlecrewpinkcrowd.com
   - DOMAIN-SUFFIX,bintray.com
-  - DOMAIN-KEYWORD,whatsapp
-  - IP-CIDR,158.85.224.160/27
-  - IP-CIDR,158.85.46.128/27
-  - IP-CIDR,158.85.5.192/27
-  - IP-CIDR,173.192.222.160/27
-  - IP-CIDR,173.192.231.32/27
+
+#--------------- Твои проверенные IP-CIDR блоки ---------------
+# Эти адреса критичны для работы Meta-сервисов напрямую, минуя блокировки DNS
   - IP-CIDR,18.194.0.0/15
-  - IP-CIDR,184.173.128.0/17
-  - IP-CIDR,208.43.122.128/27
   - IP-CIDR,34.224.0.0/12
   - IP-CIDR,50.22.198.204/30
   - IP-CIDR,54.242.0.0/15
-#--------------- meta -----------
+  - IP-CIDR,158.85.5.192/27
+  - IP-CIDR,158.85.46.128/27
+  - IP-CIDR,158.85.224.160/27
+  - IP-CIDR,173.192.222.160/27
+  - IP-CIDR,173.192.231.32/27
+  - IP-CIDR,184.173.128.0/17
+  - IP-CIDR,208.43.122.128/27
