--- a/porn.yaml
+++ b/porn.yaml
@@ -1,45 +1,55 @@
 payload:
-  - DOMAIN-SUFFIX,xvideos.com
-  - DOMAIN-SUFFIX,hqporner.com
-  - DOMAIN-SUFFIX,attachments.f95zone.to
-  - DOMAIN-SUFFIX,reddxxx.com
-  - DOMAIN-SUFFIX,redgifs.com
-  - DOMAIN-SUFFIX,xv-ru.com
+#--------------- Крупные сети (Pornhub, XNXX, XVideos) ---------------
   - DOMAIN-SUFFIX,pornhub.com
   - DOMAIN-SUFFIX,pornhub.org
   - DOMAIN-SUFFIX,phncdn.com
-  - DOMAIN-SUFFIX,phncdn.com.sds.rncdn7.com
-  - DOMAIN-SUFFIX,etahub.com
-  - DOMAIN-SUFFIX,playboy.com
-  - DOMAIN-SUFFIX,multporn.net
-  - DOMAIN-SUFFIX,rule34.art
-  - DOMAIN-SUFFIX,hentai-foundry.com
-  - DOMAIN-SUFFIX,nhentai.com
-  - DOMAIN-SUFFIX,nhentai.net
-  - DOMAIN-SUFFIX,chaturbate.com
-  - DOMAIN-SUFFIX,pornolab.net
-  - DOMAIN-SUFFIX,xhamster.com
-  - DOMAIN-SUFFIX,xhamsterlive.com
-  - DOMAIN-SUFFIX,xhcdn.com
-  - DOMAIN-SUFFIX,coomer.su
-  - DOMAIN-SUFFIX,vipergirls.to
-  - DOMAIN-SUFFIX,rentry.org
+  - DOMAIN-SUFFIX,rncdn7.com
   - DOMAIN-SUFFIX,xnxx.com
   - DOMAIN-SUFFIX,xnxx.net
   - DOMAIN-SUFFIX,xnxx.tv
   - DOMAIN-SUFFIX,xnxx3.com
   - DOMAIN-SUFFIX,xnxx-cdn.com
   - DOMAIN-SUFFIX,xnxx-ru.com
+  - DOMAIN-SUFFIX,xvideos.com
+  - DOMAIN-SUFFIX,xv-ru.com
   - DOMAIN-SUFFIX,xvideos-cdn.com
-  - DOMAIN-SUFFIX,rule34.xxx
-  - DOMAIN-SUFFIX,eporner.com
-  - DOMAIN-SUFFIX,fansly.com
-  - DOMAIN-SUFFIX,manyvids.com
-  - DOMAIN-SUFFIX,hitomi.la
-  - DOMAIN-SUFFIX,rule34.us
+
+#--------------- Веб-камеры и LIVE ---------------
+  - DOMAIN-SUFFIX,chaturbate.com
+  - DOMAIN-SUFFIX,xhamster.com
+  - DOMAIN-SUFFIX,xhamsterlive.com
+  - DOMAIN-SUFFIX,xhcdn.com
+
+#--------------- Hentai, Rule34 и Art ---------------
   - DOMAIN-SUFFIX,e-hentai.org
-  - DOMAIN-SUFFIX,ukdevilz.com
-  - DOMAIN-SUFFIX,theporndude.com
+  - DOMAIN-SUFFIX,hentai-foundry.com
+  - DOMAIN-SUFFIX,hitomi.la
+  - DOMAIN-SUFFIX,multporn.net
+  - DOMAIN-SUFFIX,nhentai.com
+  - DOMAIN-SUFFIX,nhentai.net
   - DOMAIN-SUFFIX,nude-moon.org
   - DOMAIN-SUFFIX,realbooru.com
+  - DOMAIN-SUFFIX,rule34.art
+  - DOMAIN-SUFFIX,rule34.us
+  - DOMAIN-SUFFIX,rule34.xxx
+
+#--------------- Сообщества и форумы ---------------
+  - DOMAIN-SUFFIX,attachments.f95zone.to
+  - DOMAIN-SUFFIX,coomer.su
+  - DOMAIN-SUFFIX,f95zone.to
+  - DOMAIN-SUFFIX,pornolab.net
+  - DOMAIN-SUFFIX,theporndude.com
+  - DOMAIN-SUFFIX,vipergirls.to
+
+#--------------- Другие популярные сервисы ---------------
+  - DOMAIN-SUFFIX,eporner.com
+  - DOMAIN-SUFFIX,etahub.com
+  - DOMAIN-SUFFIX,fansly.com
   - DOMAIN-SUFFIX,freeones.com
+  - DOMAIN-SUFFIX,hqporner.com
+  - DOMAIN-SUFFIX,manyvids.com
+  - DOMAIN-SUFFIX,playboy.com
+  - DOMAIN-SUFFIX,reddxxx.com
+  - DOMAIN-SUFFIX,redgifs.com
+  - DOMAIN-SUFFIX,rentry.org
+  - DOMAIN-SUFFIX,ukdevilz.com
