--- a/telegram-direct.yaml
+++ b/telegram-direct.yaml
@@ -3,3 +3,4 @@ payload:
   - IP-CIDR,91.108.0.0/16,no-resolve
   - IP-CIDR,149.154.160.0/20,no-resolve
   - IP-CIDR,185.76.151.0/24,no-resolve
+  - IP-CIDR,5.28.192.0/18,no-resolve
