--- a/tv.yaml
+++ b/tv.yaml
@@ -1,20 +1,21 @@
 payload:
-#---------- HDREZKA -------------
-  - DOMAIN-SUFFIX,hdrezka.ag
-  - DOMAIN-SUFFIX,hdrezka.ac
-  - DOMAIN-SUFFIX,hdrezka.me
-  - DOMAIN-SUFFIX,hd-rezka.tv
+#--------------- Основной плеер и контент ---------------
   - DOMAIN-SUFFIX,voidboost.cc
-  - DOMAIN-SUFFIX,rezka.ag
-  - DOMAIN-SUFFIX,rezka.my
-  - DOMAIN-SUFFIX,rezkify.com
-  - DOMAIN-SUFFIX,rezka-ua.in
-  - DOMAIN-SUFFIX,hdrezka.tv
+
+#--------------- Зеркала и домены ---------------
+  - DOMAIN-SUFFIX,hd-rezka.tv
+  - DOMAIN-SUFFIX,hdrezka.ac
+  - DOMAIN-SUFFIX,hdrezka.ag
+  - DOMAIN-SUFFIX,hdrezka.app
+  - DOMAIN-SUFFIX,hdrezka.me
   - DOMAIN-SUFFIX,hdrezka.tech
-  - DOMAIN-SUFFIX,rezka.tv
+  - DOMAIN-SUFFIX,hdrezka.tv
+  - DOMAIN-SUFFIX,hdrzk.org
+  - DOMAIN-SUFFIX,rezka.ag
+  - DOMAIN-SUFFIX,rezka.cc
   - DOMAIN-SUFFIX,rezka.fi
   - DOMAIN-SUFFIX,rezka.land
-  - DOMAIN-SUFFIX,rezka.cc
-  - DOMAIN-SUFFIX,hdrzk.org
-  - DOMAIN-SUFFIX,hdrezka.app
-#----------   -------------
+  - DOMAIN-SUFFIX,rezka.my
+  - DOMAIN-SUFFIX,rezka.tv
+  - DOMAIN-SUFFIX,rezka-ua.in
+  - DOMAIN-SUFFIX,rezkify.com
