--- a/twitter.yaml
+++ b/twitter.yaml
@@ -1,34 +1,44 @@
 payload:
-  - DOMAIN-SUFFIX,ads-twitter.com
-  - DOMAIN-SUFFIX,cms-twdigitalassets.com
-  - DOMAIN-SUFFIX,grok.com
-  - DOMAIN-SUFFIX,periscope.tv
-  - DOMAIN-SUFFIX,pscp.tv
-  - DOMAIN-SUFFIX,t.co
-  - DOMAIN-SUFFIX,tellapart.com
-  - DOMAIN-SUFFIX,tweetdeck.com
-  - DOMAIN-SUFFIX,twimg.co
-  - DOMAIN-SUFFIX,twimg.com
-  - DOMAIN-SUFFIX,twimg.org
-  - DOMAIN-SUFFIX,twitpic.com
-  - DOMAIN-SUFFIX,twitter.biz
+#--------------- Основные домены и сокращения ---------------
+  - DOMAIN-SUFFIX,x.com
   - DOMAIN-SUFFIX,twitter.com
-  - DOMAIN-SUFFIX,twitter.jp
-  - DOMAIN-SUFFIX,twittercommunity.com
-  - DOMAIN-SUFFIX,twitterflightschool.com
-  - DOMAIN-SUFFIX,twitterinc.com
-  - DOMAIN-SUFFIX,twitteroauth.com
-  - DOMAIN-SUFFIX,twitterstat.us
-  - DOMAIN-SUFFIX,twtrdns.net
+  - DOMAIN-SUFFIX,t.co
   - DOMAIN-SUFFIX,twttr.com
   - DOMAIN-SUFFIX,twttr.net
-  - DOMAIN-SUFFIX,twvid.com
-  - DOMAIN-SUFFIX,vine.co
-  - DOMAIN-SUFFIX,x.com
+  - DOMAIN-SUFFIX,twitter.biz
+  - DOMAIN-SUFFIX,twitter.jp
   - DOMAIN-KEYWORD,twitter
+
+#--------------- Медиа и CDN (Картинки и Видео) ---------------
+  - DOMAIN-SUFFIX,twimg.com
+  - DOMAIN-SUFFIX,twimg.co
+  - DOMAIN-SUFFIX,twimg.org
+  - DOMAIN-SUFFIX,twvid.com
+  - DOMAIN-SUFFIX,twitpic.com
+  - DOMAIN-SUFFIX,cms-twdigitalassets.com
+
+#--------------- Сервисы и Инфраструктура ---------------
+  - DOMAIN-SUFFIX,grok.com
+  - DOMAIN-SUFFIX,tweetdeck.com
+  - DOMAIN-SUFFIX,periscope.tv
+  - DOMAIN-SUFFIX,pscp.tv
+  - DOMAIN-SUFFIX,vine.co
+  - DOMAIN-SUFFIX,twitterinc.com
+  - DOMAIN-SUFFIX,twitterstat.us
+  - DOMAIN-SUFFIX,twtrdns.net
+  - DOMAIN-SUFFIX,twitteroauth.com
+  - DOMAIN-SUFFIX,twittercommunity.com
+  - DOMAIN-SUFFIX,twitterflightschool.com
+
+#--------------- Реклама и Аналитика ---------------
+  - DOMAIN-SUFFIX,ads-twitter.com
+  - DOMAIN-SUFFIX,tellapart.com
+
+#--------------- IPv4 Диапазоны (Критично для 2026 года) ---------------
+# Эти блоки позволяют обходить блокировки, даже если DNS подменяется
+  - IP-CIDR,69.195.160.0/19
   - IP-CIDR,192.133.76.0/22
   - IP-CIDR,199.59.148.0/22
   - IP-CIDR,199.96.56.0/21
   - IP-CIDR,202.160.128.0/22
   - IP-CIDR,209.237.192.0/19
-  - IP-CIDR,69.195.160.0/19
