--- a/vimeo.yaml
+++ b/vimeo.yaml
@@ -1,4 +1,16 @@
 payload:
+#--------------- Основные домены Vimeo ---------------
+  - DOMAIN-SUFFIX,vimeo.com
+  - DOMAIN-SUFFIX,vimeo.fr
+  - DOMAIN-SUFFIX,vimeocdn.com
+  - DOMAIN-SUFFIX,vimeostatus.com
+
+#--------------- Продукты и Бизнес ---------------
+  - DOMAIN-SUFFIX,vimeobusiness.com
+  - DOMAIN-SUFFIX,vimeogoods.com
+  - DOMAIN-SUFFIX,vimeoondemand.com
+
+#--------------- Livestream & VHX (Vimeo OTT) ---------------
   - DOMAIN-SUFFIX,livestream.com
   - DOMAIN-SUFFIX,vhx.tv
   - DOMAIN-SUFFIX,vhxqa1.com
@@ -6,12 +18,7 @@ payload:
   - DOMAIN-SUFFIX,vhxqa3.com
   - DOMAIN-SUFFIX,vhxqa4.com
   - DOMAIN-SUFFIX,vhxqa6.com
+
+#--------------- Стейджинг (Для тестов) ---------------
   - DOMAIN-SUFFIX,vimeo-staging.com
   - DOMAIN-SUFFIX,vimeo-staging2.com
-  - DOMAIN-SUFFIX,vimeo.com
-  - DOMAIN-SUFFIX,vimeo.fr
-  - DOMAIN-SUFFIX,vimeobusiness.com
-  - DOMAIN-SUFFIX,vimeocdn.com
-  - DOMAIN-SUFFIX,vimeogoods.com
-  - DOMAIN-SUFFIX,vimeoondemand.com
-  - DOMAIN-SUFFIX,vimeostatus.com
