--- a/whatsapp.yaml
+++ b/whatsapp.yaml
@@ -8,8 +8,25 @@ payload:
   - DOMAIN-SUFFIX,bintray.com
   - DOMAIN-KEYWORD,whatsapp
 
-#--------------- IPv4 Диапазоны (Звонки и Медиа) ---------------
-# Эти блоки критичны, когда DNS-фильтры пытаются «отрезать» мессенджер
+#--------------- IPv4 Диапазоны (Звонки, Фото и Видео) ---------------
+# Эти блоки позволяют обходить блокировки на уровне IP, когда DNS уже не помогает
+  # Твои новые добавленные диапазоны:
+  - IP-CIDR,31.13.24.0/21
+  - IP-CIDR,31.13.64.0/18
+  - IP-CIDR,57.141.0.0/20
+  - IP-CIDR,57.144.0.0/14
+  - IP-CIDR,66.220.144.0/20
+  - IP-CIDR,69.63.160.0/19
+  - IP-CIDR,69.171.192.0/18
+  - IP-CIDR,74.119.76.0/22
+  - IP-CIDR,129.134.0.0/17
+  - IP-CIDR,157.240.0.0/16
+  - IP-CIDR,163.64.0.0/12
+  - IP-CIDR,173.252.64.0/18
+  - IP-CIDR,185.60.216.0/22
+  - IP-CIDR,204.15.20.0/22
+
+  # Предыдущие критические блоки:
   - IP-CIDR,18.194.0.0/15
   - IP-CIDR,34.224.0.0/12
   - IP-CIDR,50.22.198.204/30
