--- a/youtube.yaml
+++ b/youtube.yaml
@@ -14,8 +14,15 @@ payload:
   - DOMAIN-SUFFIX,ytimg.com
   - DOMAIN-SUFFIX,yting.com
 
+#--------------- YouTube Go (Для мобильных и слабых соединений) ---------------
+  - DOMAIN-SUFFIX,youtubego.com
+  - DOMAIN-SUFFIX,youtubego.id
+  - DOMAIN-SUFFIX,youtubego.in
+  - DOMAIN-SUFFIX,youtubego.co.id
+  - DOMAIN-SUFFIX,youtubego.co.in
+  - DOMAIN-SUFFIX,youtubego.com.br
+
 #--------------- Региональные домены (TLD) ---------------
-# Возвращаем их списком для быстрой работы процессора Cudy
   - DOMAIN-SUFFIX,youtube.ae
   - DOMAIN-SUFFIX,youtube.al
   - DOMAIN-SUFFIX,youtube.am
@@ -167,16 +174,16 @@ payload:
   - DOMAIN-SUFFIX,youtube.uy
   - DOMAIN-SUFFIX,youtube.vn
 
-#--------------- Инфраструктура и API ---------------
+#--------------- Инфраструктура, API и Обложки ---------------
   - DOMAIN-SUFFIX,ggpht.cn
   - DOMAIN-SUFFIX,ggpht.com
+  - DOMAIN-SUFFIX,yt3.ggpht.com
+  - DOMAIN-SUFFIX,yt3.googleusercontent.com
   - DOMAIN-SUFFIX,gvt1.com
   - DOMAIN-SUFFIX,gvt2.com
   - DOMAIN-SUFFIX,jnn-pa.googleapis.com
   - DOMAIN-SUFFIX,video.google.com
   - DOMAIN-SUFFIX,wide-youtube.l.google.com
-  - DOMAIN-SUFFIX,yt3.ggpht.com
-  - DOMAIN-SUFFIX,yt3.googleusercontent.com
   - DOMAIN-SUFFIX,ytimg.l.google.com
   - DOMAIN-SUFFIX,yt-video-upload.l.google.com
   - DOMAIN-SUFFIX,youtube.googleapis.com
@@ -185,6 +192,10 @@ payload:
   - DOMAIN-SUFFIX,youtubeembeddedplayer.googleapis.com
   - DOMAIN-SUFFIX,returnyoutubedislikeapi.com
 
-#--------------- IPv4 ---------------
+#--------------- Ключевые слова (Страховка) ---------------
+  - DOMAIN-KEYWORD,youtube
+
+#--------------- IPv4 и IPv6 ---------------
   - IP-CIDR,172.110.32.0/21
   - IP-CIDR,216.73.80.0/20
+  - IP-CIDR6,2620:120:e000::/40
